// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    bucket={
      Object {
        "filter": Object {
          "status": "ac",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challenges={
      Array [
        Object {
          "allPhases": Array [
            Object {
              "phaseStatus": "Open",
              "phaseType": "Registration",
            },
          ],
          "id": "1",
          "isDataScience": true,
          "prize": Array [
            1200,
            600,
          ],
          "prizes": Array [
            1200,
            600,
          ],
          "status": "b",
          "subTrack": "CODE",
          "technologies": Array [
            "Data Science",
          ],
          "totalPrize": 1800,
          "track": "DEVELOP",
          "users": Object {},
        },
        Object {
          "allPhases": Array [
            Object {
              "phaseStatus": "Open",
              "phaseType": "Registration",
            },
          ],
          "currentPhases": Array [
            "Registration",
          ],
          "events": Array [
            Object {
              "eventName": "Submit",
            },
          ],
          "id": "2",
          "isDataScience": false,
          "prize": Array [
            1200,
            600,
          ],
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "subTrack": "CODE",
          "technologies": Array [
            "a",
            "b",
            "c",
          ],
          "totalPrize": 1800,
          "track": "DEVELOP",
          "users": Object {},
        },
      ]
    }
    expand={[MockFunction]}
    expandTag={null}
    expanded={true}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loadMoreChallenges={null}
    loading={false}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort="current-phase"
    userHandle=""
  />
</StaticRouter>
`;

exports[`Matches shallow shapshot 2`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    bucket={
      Object {
        "filter": Object {
          "status": "ac",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challenges={
      Array [
        Object {
          "id": "1",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "b",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "2",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "3",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "4",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "5",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "6",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "7",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "8",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "9",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "10",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
        Object {
          "id": "11",
          "prizes": Array [
            1200,
            600,
          ],
          "status": "a",
          "totalPrize": 1800,
          "users": Object {},
        },
      ]
    }
    expand={[MockFunction]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={[MockFunction]}
    loadMoreChallenges={null}
    loading={true}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort=""
    userHandle=""
  />
</StaticRouter>
`;

exports[`Matches shallow shapshot 3`] = `
<StaticRouter
  basename=""
  context={Object {}}
  location="/"
>
  <Bucket
    bucket={
      Object {
        "filter": Object {
          "status": "e",
        },
        "sorts": Array [
          "current-phase",
        ],
      }
    }
    challenges={Array []}
    expand={[MockFunction]}
    expandTag={null}
    expanded={false}
    expandedTags={Array []}
    keepPlaceholders={false}
    loadMore={null}
    loadMoreChallenges={null}
    loading={true}
    newChallengeDetails={false}
    openChallengesInNewTabs={false}
    setFilterState={[MockFunction]}
    setSort={[MockFunction]}
    sort=""
    userHandle=""
  />
</StaticRouter>
`;
